--- a/resume.html
+++ b/resume.html
@@ -150,7 +150,7 @@
 				</ul>
 			</div>
 			<div class="section">
-				<a href="media/resume.pdf" download="resume" target=_blank>
+				<a href="resume.pdf" download="resume" target=_blank>
 					Download Official Resume
 				</a>
 			</div>
