--- a/aboutme.html
+++ b/aboutme.html
@@ -171,7 +171,7 @@
 
 				  <tr>
 					<th>Published URL</th>
-					<td>/LINK/</td>
+					<td><a href:"https://syaf717202.github.io/syaf-resume">https://syaf717202.github.io/syaf-resume</a></td>
 				  </tr>
 
 			</table>
