--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<title>Home</title>
@@ -21,7 +21,11 @@
 		  line-height: 1.5;
 		  text-align :justify;
 		}
-
+			
+		/* h1 STYLE */
+		h1 {
+		font-family: 'Comfortaa';
+		}
 
 		/* PARA STYLE */
 		summary {
@@ -51,14 +55,14 @@
 		  padding: 10px;
 		}
 
-		/* DIV FOOTER */
+		/*DIV FOOTER*/
 		.container3 {
 		  background-color:#D2B68A;
 		  text-align : center;
 		}
 
 
-		/* DIV VIDEO */
+		/*DIV VIDEO*/
 		.video{
 		  width : 370px;
 		  height : 450px;
@@ -67,7 +71,7 @@
 		  padding: 30px;
 		}
 
-		/* DIV SUMMARY */
+		/*DIV SUMMARY*/
 		.div2 {
 			padding-right: 150px;
 			padding-top: 20px;
@@ -75,18 +79,18 @@
 			padding-left :20px;
 			float : right;
 			width: 75%;
-			background-color : ##EEE5D9;
+			background-color : #EEE5D9;
 
 		}
 
 
-		/* DIV MAIN CONTENT */
+		/*DIV MAIN CONTENT*/
 		div.mycontainer {
 		  width:100%;
 		  overflow:auto;
 		}
 		
-		/* HEADER IMAGE STYLE */
+		/*HEADER IMAGE STYLE*/
 		.headerimg {
 			height : 200px;
 			width: 1450px;
@@ -100,7 +104,7 @@
 
 		<!-- HEADER-->
 		<header>
-		 <img class="headerimg" src="header.png">
+		 <img class="headerimg" src="header.png" alt="headerimage">
 		 <div class="container">
 		  <nav>
 				<a href="index.html">Home</a>
@@ -116,13 +120,13 @@
 		<!-- MAIN CONTENT-->
 		<div class="mycontainer">
 			<div>
-				<video class="video" controls autoplay>
+				<video class="video" controls>
 					<source src="intro.mp4" type="video/mp4">
 				</video>
 			</div>
 
 			<div class="div2">
-				<h1 style="font-family: 'Comfortaa';"> Summary</h1>
+				<h1> Summary</h1>
 				<summary>
 				Multifaceted and results-oriented professional with 4 years of progressive experience spanning management, operational oversight, 
 				and financial accounting within dynamic and growth-focused organizations. Proven ability to integrate strategic planning with 
