--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<title>About Me</title>
@@ -171,7 +171,7 @@
 
 				  <tr>
 					<th>Published URL</th>
-					<td><a href="https://syaf717202.github.io/syaf-resume">https://syaf717202.github.io/syaf-resume</a></td>
+					<td><a href="https://syaf717202.github.io/syaf-resume/" target=_blank>https://syaf717202.github.io/syaf-resume/</a></td>
 				  </tr>
 
 			</table>
@@ -187,3 +187,4 @@
 
 	</body>
 </html>
+s
