--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 		/* QUOTE STYLE */
 		q {
-		  font-family: 'Style Script';
-		  font-size: 28px;
+		  font-family: 'Times New Roman';
+		  font-size: 20px;
 		}
 
 		/* DIV NAV */
