--- a/aboutme.html
+++ b/aboutme.html
@@ -166,7 +166,7 @@
 
 				  <tr>
 					<th>Submission Date</th>
-					<td>24 May 2025</td>
+					<td>25 May 2025</td>
 				  </tr>
 
 				  <tr>
@@ -180,7 +180,7 @@
 		</div>
 		<!-- FOOTER -->
 		<footer class="container3">.
-			<p>This website for study purpose for code IMS458. Best browser : Google Chrome. Best viewed on displays. &copy; All right reserve.</p>
+			<p>This website for study purpose for code IMS458. Best browser for all devices : Google Chrome. Best viewed on displays. &copy; All right reserve (2025).</p>
 		</footer>
 
 
