--- a/education.html
+++ b/education.html
@@ -427,7 +427,7 @@
 		
 		<!-- FOOTER -->
 		<footer class="container4">.
-			<p>This website for study purpose for code IMS458. Best browser : Google Chrome. Best viewed on displays. &copy; All right reserve.</p>
+			<p>This website for study purpose for code IMS458. Best browser for all devices : Google Chrome. Best viewed on displays. &copy; All right reserve (2025).</p>
 		</footer>
 	</body>
 
