--- a/resume.html
+++ b/resume.html
@@ -61,6 +61,12 @@
 				padding-left: 400px;
 			}
 			
+			/* DIV FOOTER */
+			.container3 {
+			  background-color:#D2B68A;
+			  padding: 5px;
+			  text-align : center;
+			}
 		</style>
 	</head>
 	<body>
@@ -155,6 +161,11 @@
 				</a>
 			</div>
 		</div>
+		
+		<!-- FOOTER -->
+			<footer class="container3">.
+			<p>This website for study purpose for code IMS458. Best browser for all devices : Google Chrome. Best viewed on displays. &copy; All right reserve (2025).</p>
+			</footer>
 	</body>
 </html>
 
