--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 		</div>
 		<!-- FOOTER -->
 		<footer class="container3">.
-			<p>This website for study purpose for code IMS458. Best browser : Google Chrome. Best viewed on displays. &copy; All right reserve.</p>
+			<p>This website for study purpose for code IMS458. Best browser for all devices : Google Chrome. Best viewed on displays. &copy; All right reserve (2025).</p>
 		</footer>
 	</body>
 
